# RubikCube

./: CMakeLists.txt  brink.h  cube.h  cube.in  cube_solver.h  cube_sweep.cpp  cube_sweep.h  main.cpp  small_cube.h
